--- a/index.css
+++ b/index.css
@@ -14,14 +14,14 @@
 .menu ul{
    display: inline-flex;
    margin: 50px;
-   color: #42455a;
+   color: white;
 }
 .menu ul li{
    list-style: none;
    margin: 0 20px;
    color: white;
    cursor: pointer;
-   color: #42455a;
+   color: white;
    margin-top: 0px;
 }
 .logo img {
@@ -40,7 +40,7 @@
     margin-left: 30px;
 }
 .my{
-    margin-left: 560px;
+    margin-left: 580px;
     color: white;
 }
 .www{
@@ -100,4 +100,16 @@
 
 .con{
     margin-left: 570px;
+}
+.ba{
+    color: black;
+}
+.ado{
+    color: black;
+}
+.co{
+    color: black;
+}
+.bl{
+    color: black;
 }
