--- a/index.css
+++ b/index.css
@@ -90,14 +90,9 @@
 .ddd{
     background: white;
     width: 100%;
-    height: 300px;
+    height: 150px;
     background-size: 100%;
 }
-.iii{
-    margin-left: 550px;
-    margin-top: 50px;
-}
-
 .con{
     margin-left: 570px;
 }
@@ -113,3 +108,17 @@
 .bl{
     color: black;
 }
+.iii ul{
+    display: inline-flex;
+    margin: 50px;
+    color: white;
+    margin-left: 380px;
+} 
+.iii ul li{
+    list-style: none;
+    margin: 0 40px;
+    color: white;
+    cursor: pointer;
+    color: white;
+    margin-top: 0px;
+ }
