--- a/index.css
+++ b/index.css
@@ -5,11 +5,12 @@
    
 }     
 .container{
-   width: 100%;
+   width: fit-content;
    height: 1000px;
    background: url(vidul\ photo.jpg) ;
    background-size: 100%;
    background-repeat: no-repeat;
+   margin-right: -500px;
 }    
 .menu ul{
    display: inline-flex;
@@ -23,15 +24,17 @@
    cursor: pointer;
    color: white;
    margin-top: 0px;
+  
 }
 .logo img {
     width: 50px;
     margin-top: -10px;
-    margin-right: 48px;
+    margin-right: 48px; 
+    
 }
 .background{
-    width: 100%;
-   height: 610px;
+    width: fit-content;
+   height: fit-content;
    background: url(download.png);
    background-size: 100%;
 }
@@ -60,6 +63,7 @@
 }
 .acst{
     margin-left: 700px;
+    margin-right: 162px;
     margin-top: -205px;
 }
 .pc{
@@ -73,14 +77,16 @@
 }
 .abc{
     background: lightgrey;
-    width: 100%;
-    height: 200px;
+    min-width: 1262;
+    height: fit-content;
+    width: fit-content;
     background-size: 100%;
+    color: lig;
 }
 .vidul{
-    margin-left: 401px;
-    margin-right: 401px;
-    margin-top: 50px;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 20px;
     color: black;
 }
 .about{
@@ -112,7 +118,7 @@
     display: inline-flex;
     margin: 50px;
     color: white;
-    margin-left: 380px;
+    margin-left: 310px;
 } 
 .iii ul li{
     list-style: none;
@@ -122,3 +128,11 @@
     color: white;
     margin-top: 0px;
  }
+.ooo{
+    color: lightgrey;
+    margin-right: 168px;
+}
+.yyyy{
+    color: transparent;
+    margin-right: 773px;
+}
