--- a/index.css
+++ b/index.css
@@ -81,18 +81,107 @@
     border: 3px;
     border-color: white;
 }
+.card{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.card::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background-color: cyan;
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.card:hover::after{
+    left: 0%;
+    width: 36.5%;
+    
+    
+}
 .edit{
     margin-top: 30px;
     margin-left: 162px;
+}
+
+.edit{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.edit::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background-color: cyan;
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.edit:hover::after{
+    left: 0%;
+    width: 36.5%; 
+    
 }
 .acst{
     margin-left: 700px;
     margin-right: 162px;
     margin-top: -205px;
 }
+.acst{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.acst::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background-color: cyan;
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.acst:hover::after{
+    left: 0%;
+    width: 100%; 
+    
+}
 .pc{
     margin-top: -200px;
     margin-left: 700px;
+}
+.pc{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.pc::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background-color: cyan;
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.pc:hover::after{
+    left: 0%;
+    width: 71%; 
 }
 .vhb{
     color: lightblue;
@@ -136,8 +225,9 @@
 .ba::after{
     content: "";
     width: 0%;
-    height: 5px;
-    background-color: cyan;
+    height: 5px;background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -146,6 +236,7 @@
 .ba:hover::after{
     left: 0%;
     width: 100%;
+    
 }
 .co{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
@@ -158,7 +249,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -179,7 +273,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #00F260;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -200,7 +297,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -256,7 +356,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #FF5F6D;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFC371, #FF5F6D);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFC371, #FF5F6D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -277,7 +380,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -298,7 +404,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #2980B9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -319,7 +428,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #fc4a1a;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -340,7 +452,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #232526;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -361,7 +476,10 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #e52d27;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #b31217, #e52d27);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #b31217, #e52d27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -382,7 +500,9 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #833ab4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -403,7 +523,9 @@
     content: "";
     width: 0%;
     height: 5px;
-    background-color: cyan;
+    background: #00c6ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
