--- a/index.css
+++ b/index.css
@@ -8,9 +8,10 @@
 .container{
    width: fit-content;
    height: 610px;
-   background: lightskyblue;  /* fallback for old browsers */
-   background: -webkit-linear-gradient(to right, cyan, lightskyblue, lightgreen, cyan);  /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to right, cyan,lightskyblue,lightgreen, cyan ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   min-width: 1263px;
+   background: white;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, lightgrey, white,white,lightgrey);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, lightgrey, white,white,lightgrey); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background-size: 100%;
    background-repeat: no-repeat;
    margin-right: -505px;
@@ -38,9 +39,10 @@
 }
 .background{
     width: fit-content;
-   height: fit-content;
-   background: url(download.png);
-   background-size: 100%;
+    height: fit-content;
+    background: dodgerblue;
+    background-size: 100%;
+    min-width: 1262px;
 }
 .hello{
     margin-top: 150px;
@@ -81,7 +83,11 @@
     margin-top: 30px;
     margin-left: 162px;
     border: 3px;
-    border-color: white;
+    height: 200px;
+    border-bottom: none;
+    width: 400px;
+    border-color: black;
+    border-style: solid;
 }
 .card{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
@@ -102,15 +108,18 @@
 }
 .card:hover::after{
     left: 0%;
-    width: 36.5%;
-    
-    
+    width: 100%;
 }
 .edit{
     margin-top: 30px;
     margin-left: 162px;
+    border: 3px;
+    border-color: black;
+    height: 200px;
+    border-bottom: none;
+    width: 400px;
+    border-style: solid;
 }
-
 .edit{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
     font-size: 110%;
@@ -130,13 +139,18 @@
 }
 .edit:hover::after{
     left: 0%;
-    width: 36.5%; 
-    
+    width: 100%; 
 }
 .acst{
     margin-left: 700px;
     margin-right: 162px;
-    margin-top: -205px;
+    margin-top: -205px; 
+    border: 3px;
+    border-color: black;
+    height: 200px;
+    width: 400px;
+    border-bottom: none;
+    border-style: solid;
 }
 .acst{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
@@ -158,11 +172,16 @@
 .acst:hover::after{
     left: 0%;
     width: 100%; 
-    
 }
 .pc{
     margin-top: -200px;
     margin-left: 700px;
+    border: 3px;
+    border-color: black;
+    height: 200px;
+    width: 400px;
+    border-style: solid;
+    border-bottom: none;
 }
 .pc{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
@@ -183,7 +202,7 @@
 }
 .pc:hover::after{
     left: 0%;
-    width: 71%; 
+    width: 100%; 
 }
 .vhb{
     color: lightblue;
@@ -193,7 +212,7 @@
 .abc{
     background: lightgrey;
     min-width: 1262;
-    height: fit-content;
+    height: 400px;
     width: fit-content;
     background-size: 100%;
     color: lig;
@@ -201,7 +220,7 @@
 .vidul{
     margin-left: 300px;
     margin-right: 300px;
-    margin-top: 20px;
+    margin-top: 110px;
     color: black;
 }
 .about{
@@ -211,7 +230,7 @@
 .ddd{
     background: white;
     width: 100%;
-    height: 150px;
+    height: 300px;
     background-size: 100%;
 }
 .con{
@@ -238,7 +257,7 @@
 .ba:hover::after{
     left: 0%;
     width: 100%;
-    
+
 }
 .co{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
@@ -254,7 +273,6 @@
     background: #00F260;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #0575E6, cyan);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
     position: absolute;
     bottom: 0%; left: 50%;
     border-radius: 10px;
@@ -324,7 +342,7 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     color: white;
     cursor: pointer;
     color: white;
-    margin-top: 0px;
+    margin-top: 50px;
  }
 .ooo{
     color: lightgrey;
@@ -335,13 +353,16 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     margin-right: 773px;
 }
 .you{
-    height: 300px;
+    height: 220px;
     width: 380px;
     background-color: lightblue;
     margin-left: 20px;
     margin-right:18px;
+    margin-top: 100px;
     white-space: 100;
-    border: lightskyblue;
+    border: 0px;
+    border-color: transparent;
+    border-style: solid;
     margin-bottom: 20px;
     
 }
@@ -354,10 +375,12 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
 .vide{
     background-color: lightblue;
     width: fit-content;
+    min-width: 1263px;
+    height: 600px;
 }
 .h3{ 
     margin-left: 570px;
-}
+} 
 .mail{
     font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
     font-size: 110%;
@@ -365,6 +388,7 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     position: relative;
     color: cyan;
 }
+
 .mail::after{
     content: "";
     width: 0%;
