--- a/index.css
+++ b/index.css
@@ -7,15 +7,19 @@
 }     
 .container{
    width: fit-content;
-   height: 610px;
+   height: 130px;
    min-width: 1263px;
-   background: white;  /* fallback for old browsers */
-   background: -webkit-linear-gradient(to right, lightgrey, white,white,lightgrey);  /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to right, lightgrey, white,white,lightgrey); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   background: black;
    background-size: 100%;
    background-repeat: no-repeat;
    margin-right: -505px;
-}    
+} 
+.vidul1114{
+    background: url(—Pngtree—hd\ abstract\ tech\ background_578452.jpg);
+    width: fit-content;
+    min-width: 1263px;
+    height: 500px;
+}   
 .menu ul{
    display: inline-flex;
    margin: 50px;
@@ -35,17 +39,20 @@
 .logo img {
     width: 50px;
     margin-top: -10px;
-    margin-right: 48px; 
+    margin-right: 48px;
+    border: white; 
+    border-style: ridge;
 }
 .background{
     width: fit-content;
+    max-width: 1262px;
+    background-color: #42455a;
     height: fit-content;
-    background: dodgerblue;
     background-size: 100%;
     min-width: 1262px;
 }
 .hello{
-    margin-top: 150px;
+    margin-top: 0px;
     margin-left: 30px;
 }
 .my{
@@ -212,7 +219,7 @@
 .abc{
     background: lightgrey;
     min-width: 1262;
-    height: 400px;
+    height: 300px;
     width: fit-content;
     background-size: 100%;
     color: lig;
@@ -220,7 +227,7 @@
 .vidul{
     margin-left: 300px;
     margin-right: 300px;
-    margin-top: 110px;
+    margin-top: 80px;
     color: black;
 }
 .about{
@@ -230,7 +237,7 @@
 .ddd{
     background: white;
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-size: 100%;
 }
 .con{
@@ -342,7 +349,7 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     color: white;
     cursor: pointer;
     color: white;
-    margin-top: 50px;
+    margin-top: 30px;
  }
 .ooo{
     color: lightgrey;
@@ -376,7 +383,7 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     background-color: lightblue;
     width: fit-content;
     min-width: 1263px;
-    height: 600px;
+    height: 500px;
 }
 .h3{ 
     margin-left: 570px;
