--- a/index.css
+++ b/index.css
@@ -162,6 +162,8 @@
     width: 100%;
     height: 200px;
     background-size: 100%;
+    min-width: 1262px;
+    max-width: 1262px;
 }
 .con{
     margin-left: 570px;
