--- a/index.css
+++ b/index.css
@@ -299,6 +299,20 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     margin-bottom: 20px;
     
 }
+.caa{
+    height: 220px;
+    width: 380px;
+    border-radius: 2rem;
+    background-color: lightblue;
+    margin-left: 435px;
+    margin-right:18px;
+    margin-top: 100px;
+    white-space: 100;
+    border: 0px;
+    border-color: transparent;
+    border-style: solid;
+    margin-bottom: 20px;
+}
 .pppp{
     color: lightblue;
 }
@@ -309,7 +323,7 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     background-color: lightblue;
     width: fit-content;
     min-width: 1263px;
-    height: 500px;
+    height: 800px;
 }
 .h3{ 
     margin-left: 570px;
