--- a/home.css
+++ b/home.css
@@ -1,24 +1,123 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+.nav{
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
+}
+label.logo{
+  color: #f2f2f2;
+  font-size: 33px;
+  line-height: 80px;
+  padding: 0 140px;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+}
+.nav ul{
+  float: right;
+  margin-right: 60px;
+}
+.nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 2px;
+}
+.nav ul li a{
+  color: #f2f2f2;
+  font-weight: 500;
+  font-size: 20px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  /* text-transform: uppercase; */
+  font-family: 'Poppins', sans-serif;
+}
+a.active,a:hover{
+  background: #1b9bff;
+  transition: .5s;
+}
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+@media (max-width: 952px){
+  label.logo{
+    font-size: 27px;
+    padding-left: 25px;
+  }
+  nav ul li a{
+    font-size: 16px;
+  }
+}
+@media (max-width: 858px){
+  .checkbtn{
+    display: block;
+    margin-right: 40px;
+  }
+  .nav ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #0e7ed3;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+  .nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .nav ul li a{
+    font-size: 20px;
+  }
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+}
+section{
+  background: url(bg1.jpg) no-repeat;
+  background-size: cover;
+  height: calc(100vh - 80px);
+} 
 *{margin: 0;
     padding: 0;
     font-family: sans-serif;
     background-size: 1263px;
     text-decoration: none;
      
-  }     
-  .container{
-     width: fit-content;
-     height: 130px;
-     min-width: 1280px;
-     background: #343a40!important;
-     background-size: 100%;
-     background-repeat: no-repeat;
-     margin-right: -505px;
+}     
+.container{
+    width: 1280px;
+    height: 130px;
+
+    background: #343a40!important;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-right: -505px;
   } 
   .vidul1114{
       background: url(—Pngtree—hd\ abstract\ tech\ background_578452.jpg);
-      width: fit-content;
-      min-width: 1280px;
-      height: 480px;
+      width: 1280px;
+      height: 530px;
   }   
   .menu ul{
      display: inline-flex;
@@ -38,7 +137,7 @@
   }
   .logo img {
       width: 50px;
-      margin-top: -10px;
+      margin-top: 15px;
       margin-right: 48px;
       border: white; 
       border-style: ridge;
@@ -46,7 +145,334 @@
   .hello{
     margin-top: 0px;
     margin-left: 30px;
+    font-size: 21px;
 }
 .bbbbb{
     color: transparent;
+}
+.ba{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.ba::after{
+    content: "";
+    width: 0%;
+    height: 5px;background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, cyan);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.ba:hover::after{
+    left: 0%;
+    width: 100%;
+
+}
+.co{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.co::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, cyan);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.co:hover::after{
+    left: 0%;
+    width: 100%;
+}
+.bl{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.bl::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #00F260;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0575E6, cyan);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.bl:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.abo{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.abo::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #00F260;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, cyan);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.abo:hover::after{
+    left: 0%;
+    width: 100%;
+}
+.ddd{
+    background: white;
+    width: 1262px;
+    height: 200px;
+
+}
+.iii ul{
+    display: inline-flex;
+    margin: 0px;
+    width: 300px;
+    color: white;
+    margin-left: +100px;
+    
+} 
+.iii ul li{
+    list-style: none;
+    text-align: center;
+    margin: 0 40px;
+    color: white;
+    cursor: pointer;
+    color: white;
+    margin-top: 30px;
+ }
+ .mail{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+
+.mail::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #FF5F6D;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, white, red);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, white, red); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.mail:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.phone{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.phone::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, black, white);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, black, white); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.phone:hover::after{
+    left: 0%;
+    width: 100%;
+}    
+.ad{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.ad::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #2980B9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, lightblue);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #6DD5FA, lightblue); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.ad:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.blogger{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.blogger::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #fc4a1a;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.blogger:hover::after{
+    left: 0%;
+    width: 100%;
+}     
+.github{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.github::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #232526;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, white, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, white, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.github:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.youtube{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.youtube::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #e52d27;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #b31217, #e52d27);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #b31217, #e52d27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.youtube:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.instagram{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.instagram::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #833ab4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.instagram:hover::after{
+    left: 0%;
+    width: 100%;
+}      
+.twitter{
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
+    font-size: 110%;
+    text-decoration: none;
+    position: relative;
+    color: cyan;
+}
+.twitter::after{
+    content: "";
+    width: 0%;
+    height: 5px;
+    background: #00c6ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    position: absolute;
+    bottom: 0%; left: 50%;
+    border-radius: 10px;
+    transition: all 500ms ease; 
+}
+.twitter:hover::after{
+    left: 0%;
+    width: 100%;
+}
+.con{
+    text-align: center;
+}
+@media (max-width:2000px) {
+    
+    .vidul1114{
+        width: 100%;
+    }
+    .hello{
+        width: 50%;
+    }
+    .con{
+        text-align: center;
+    }
+    .ddd{
+        width: 100%;
+    }
 }
